# freeing

./: .gitignore  README.md  freeing.cabal
src/: Freeing.hs
test/: Spec.hs
