name:                freeing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ejconlon/freeing
license:             PublicDomain
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Freeing
  build-depends:       base >= 4.8 && < 5
                     , free
                     , lens
                     , mtl
                     , transformers
  default-language:    Haskell2010

test-suite freeing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , freeing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ejconlon/freeing
